Mejoras en el Header y se añade el person de Schema.org

--- a/index.html
+++ b/index.html
@@ -2,23 +2,28 @@
 <html>
     <head refix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article:
     http://ogp.me/ns/article#">
-        <title>Currículum Sergio Suárez</title>
-        <link rel="stylesheet" type="text/css" href="assets/style.css">
-        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-        <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
-        <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.2.0/css/all.css'>
+        <title>CV de Sergio Suárez, estudiante de Keepcoding y programador Web Full Stack.</title>
+
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Sergio Suarez Gil">
+        <meta name="description" content="Este es el curriculum de Sergio Suárez Gil, Desarrollador Web Full Stack - KeepCoding, bienvenido y espero que te guste su contenido.">
+        
         <meta property="og:title" content="Sergio Suarez CV" />
         <meta property="og:type" content="article" />
         <meta property="og:url" content="https://sergiosuarezdev.com" />
         <meta property="og:image" content="https://sergiosuarezdev.com/assets/img/sergio.jpg" /> 
         <meta property="og:description" content="CV De Sergio Suarez" /> 
-        <meta property="og:site_name" content="Your Site Name, i.e. Moz" /> 
-        <meta property="fb:app_id" content="X6YHBDIL73h74Y" />
+        <meta property="og:site_name" content="Sitio Web de Sergio Suarez" /> 
+        <meta property="fb:app_id" content="XXXXXXXX" />
+       
+        <link rel="stylesheet" type="text/css" href="assets/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+        <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
+        <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.2.0/css/all.css'>
     </head>
 
-<body>
+<body itemscope itemtype="https://schema.org/Person">
 	<header>
         <section class="banner">
             <h1>SERGIO SUÁREZ</h1>
