Añadida imagen Sergio

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
                     <span class="volver"><a href=#>Volver</a></span>
                 </header>
                 <div class="wrapperText">
+                    <figure><img class="photo" src="assets/img/sergio.jpg" 
+                        alt="Sergio" itemprop="image">
+                    <figcaption>Sergio Suarez</figcaption>
+                    </figure>
                     <p>Mi nombre es Sergio Suárez, tengo 34 años, soy de Santiago de Compostela pero 
                         actualmente vivo en Valladolid. Trabajo actualmente como programador.</p>
                 </div>
